# mscclpp

./: .black  .buildinfo  .clang-format  .codecov.yml  .devcontainer.json  .gitignore  .readthedocs.yaml  CITATION.cff  CMakeLists.txt  LL_OPTIMIZATION_HISTORY.md  Makefile  README.html  README.md  SUPPORT.md  TODO.md  _build_version_metadata.py  copyjson.sh  copymscclpp.sh  ep-instructions.md  executor_test.py  generate-json.sh  genindex.html  index.html  mscclpp_ideas_plan.md  multi-node-skills.md  objects.inv  pyproject.toml  requirements.txt  response.txt  run-sendrecv2.sh  run.sh  run_onenode.sh  search.html  searchindex.js  setup.py  test.json
apps/nccl/: CMakeLists.txt  README.md  rccl_test.py
apps/nccl-audit-shim/: CMakeLists.txt
include/: CMakeLists.txt
include/mscclpp/: algorithm.hpp  assert_device.hpp  atomic.hpp  atomic_device.hpp  channel.hpp  checks.hpp  concurrency.hpp  concurrency_device.hpp  config.hpp  copy_device.hpp  core.hpp  cuda_utils.hpp  datatype.hpp  device.hpp  dynamic_execution_plan.hpp  env.hpp  epoch.hpp  errors.hpp  executor.hpp  fifo.hpp  fifo_device.hpp  gpu.hpp  gpu_data_types.hpp  gpu_utils.hpp  group.hpp  group_execution_plan.hpp  ibgda_port_channel_device.hpp  memory_channel.hpp  memory_channel_device.hpp  nccl.h  numa.hpp  nvls.hpp  nvls_device.hpp  packet.hpp  packet_device.hpp  poll.hpp  poll_device.hpp  port_channel.hpp  port_channel_device.hpp  proxy.hpp  (+11 more)
include/npkit/: npkit.hpp  npkit_event.hpp
python/: .gitignore  CMakeLists.txt  Makefile  README.md  ci.sh  config_py.cpp  core_py.cpp  dev-requirements.txt  error_py.cpp  fifo_py.cpp  format.sh  main_py.cpp  numa_py.cpp  proxy_channel_py.cpp  requirements.txt  requirements_cu11.txt  requirements_cu12.txt  requirements_cuda11.txt  requirements_cuda12.txt  requirements_cuda13.txt  requirements_rocm6.txt  requirements_rocm7.txt  semaphore_py.cpp  setup.py  setup.sh  sm_channel_py.cpp  test.sh
python/benchmark/: __init__.py  allreduce.cu  allreduce1.cu  allreduce2.cu  allreduce_bench.py  mscclpp_op.py  nccl_op.py
python/csrc/: CMakeLists.txt  algorithm.cpp  core_py.cpp  env_py.cpp  error_py.cpp  executor_py.cpp  fifo_py.cpp  gpu_utils_py.cpp  memory_channel_py.cpp  npkit_py.cpp  numa_py.cpp  port_channel_py.cpp  semaphore_py.cpp  switch_channel_py.cpp  utils_py.cpp
python/examples/: allgather_allpairs_multinodes_packets.py  allgather_barrier.py  allgather_pkt.py  allreduce_allpairs.py  allreduce_allpairs_get.py  allreduce_allpairs_packet.py  allreduce_nvls.py  allreduce_ring.py  bootstrap.py  config.py  host_send_recv.py  send_recv.py  send_recv_packet.py  send_recv_proxy.py  utils.py
python/mscclpp/: .gitignore  CMakeLists.txt  __init__.py  __main__.py  _algorithm.py  _common.py  _compiler.py  _executor.py  build_helper.py  comm.py  core_py.cpp  env_py.cpp  error_py.cpp  executor.cpp  executor_py.cpp  fifo_py.cpp  gil_release.hpp  gpu_utils_py.cpp  jit.py  libclang_utils.py  memory_channel_py.cpp  npkit_py.cpp  numa_py.cpp  nvls_py.cpp  plan.py  plans.py  port_channel_py.cpp  proxy_channel_py.cpp  semaphore_py.cpp  switch_channel_py.cpp  test_mscclpp.py  utils.py  utils_py.cpp  version_helper.py
python/mscclpp_benchmark/: __init__.py  allreduce.cu  allreduce_bench.py  allreduce_k1.cu  allreduce_k2.cu  allreduce_k3.cu  allreduce_k4.cu  allreduce_k5.cu  bench_collective.py  comm.py  common.cuh  correctness.py  gpu.py  kernel_gen.py  mscclpp_op.py  nccl_op.py  tuner.py  tuning_config.py
python/mscclpp_torchcomm/: CMakeLists.txt  requirements_cuda12.txt
python/mscclpp_torchcomms/: CMakeLists.txt  __init__.py  pyproject.toml  requirements_cuda12.txt
python/src/: .clang-format  _py_mscclpp.cpp
python/test/: CMakeLists.txt  allreduce1.cu  allreduce_bench.py  common.hpp  conftest.py  d2d_semaphore_perf_test.cu  d2d_semaphore_test.cu  executor_test.py  executor_test_verifier.cu  fifo_test.ci  fifo_test.cu  h2d_semaphore_test.cu  layout.py  mscclpp_common.h  (+24 more)
src/: .gitignore  CMakeLists.txt  algorithm.cc  basic_proxy_handler.cc  bootstrap.cc  c_style_remnants.cc  channel.cc  communicator.cc  communicator.cpp  config.cc  connection.cc  connection_kernel.cu  connection_kernels.cu  context.cc  core.cc  cuda_utils.cc  debug.cc  dynamic_execution_plan.cc  endpoint.cc  endpoint.cpp  env.cpp  epoch.cc  errors.cc  fifo.cc  flag.cc  gdr.cc  gpu_ipc_mem.cc  gpu_utils.cc  gpu_utils.cu  group.cc  group_execution_plan.cc  host_connection.cc  host_connection.cpp  ib.cc  ibverbs_wrapper.cc  init.cc  init_test.cc  logger.cc  memory_channel.cc  numa.cc  (+16 more)
test/: CMakeLists.txt  README.md  README_group_execution_plan.md  allgather_test.cu  allgather_test_cpp.cu  allgather_test_host_offloading.cu  allreduce_allpairs_test.cu  allreduce_test.cu  bench_sglang.py  bootstrap_test_cpp.cc  common.cu  communicator_test_cpp.cu  concrete_alltoallv_plan_0_3354870970709250.json  concrete_alltoallv_plan_0_3867294770437475.json  concrete_alltoallv_plan_1_3354870970514117.json  concrete_alltoallv_plan_1_3867294770418547.json  concrete_alltoallv_plan_2_3354870970776399.json  concrete_alltoallv_plan_2_3867294770502996.json  concrete_alltoallv_plan_3_3354870970515169.json  concrete_alltoallv_plan_3_3867294770401560.json  dynamic_alltoallv_mscclpp_test.cpp  dynamic_alltoallv_plan.json  dynamic_alltoallv_simple_example.cpp  dynamic_alltoallv_test.cpp  executor_test.cc  framework.cc  framework.hpp  group_example.cpp  group_execution_plan_example.cpp  ib_test.cc  indirect_connection_test.cc  mp_unit_tests.cu  nccl_api_test.cc  ndv5-topo.xml  nvls_test.cu  p2p_test.cu  run_mpi_test.sh.in  sendrecv_test.cu  single_turn_completions_with_si_fixed.jsonl
tests/: CMakeLists.txt  allgather_test.cu  allgather_test2.cu  allgather_test3.cu  allgather_test_cpp.cu  allgather_test_standalone.cu  allreduce.h  allreduce_allpairs_test.cu  allreduce_test.cu  allreduce_test_mpi.cu  bootstrap_test.cc  bootstrap_test_cpp.cc  bootstrap_test_mpi.cc  common.cu  common.h  communicator_test_cpp.cc  communicator_test_cpp.cu  p2p_test.cu  p2p_test_mpi.cu  prim_test_mpi.cu  prims_ll.h  ring_send_recv_test.cu  sendrecv_test.cu  timer.cc  timer.h
(+1681 files in other folders)
